--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,7 +16,6 @@ body {
 
 body {
   font-family: var(--font-geist-sans), sans-serif;
-  overflow-x: hidden;
 }
 
 code, pre {
@@ -85,5 +84,8 @@ code, pre {
   body {
     @apply bg-background text-foreground;
   }
+}
+.mainDiv {
+  width: calc(100vw - 100%);
 }
 
